<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragment.TelemetryFragment">

    <LinearLayout
        android:id="@+id/drone_head_bar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/footer_header_padding"
        android:background="@drawable/shape">
        <TextView
            android:id="@+id/drone_state"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/state_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="@dimen/bar_divider_with"
            android:layout_height="@dimen/bar_divider_height"
            android:layout_gravity="center_vertical"
            android:background="@android:color/background_dark"/>
        <TextView
            android:id="@+id/drone_mode"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/mode_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <View
            android:layout_width="@dimen/bar_divider_with"
            android:layout_height="@dimen/bar_divider_height"
            android:layout_gravity="center_vertical"
            android:background="@android:color/background_dark"/>
        <TextView
            android:id="@+id/drone_battery"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/battery_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <View
            android:layout_width="@dimen/bar_divider_with"
            android:layout_height="@dimen/bar_divider_height"
            android:layout_gravity="center_vertical"
            android:background="@android:color/background_dark"/>
        <TextView
            android:id="@+id/drone_satellite"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/sat_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <View
            android:layout_width="@dimen/bar_divider_with"
            android:layout_height="@dimen/bar_divider_height"
            android:layout_gravity="center_vertical"
            android:background="@android:color/background_dark"/>
        <TextView
            android:id="@+id/drone_radio"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/radio_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
    </LinearLayout>

    <TextView
        android:id="@+id/drone_health"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:layout_below="@id/drone_head_bar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/health_na"
        android:textColor="@android:color/black"
        android:textSize="@dimen/telemetry_health_size"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footer_height"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/footer_header_padding"
        android:background="@drawable/shape">

        <TextView
            android:id="@+id/drone_h_speed"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"
            android:text="@string/h_speed_na"
            />
        <TextView
            android:id="@+id/drone_v_speed"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_below="@id/drone_h_speed"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/v_speed_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <TextView
            android:id="@+id/drone_lat"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/drone_h_speed"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/lat_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <TextView
            android:id="@+id/drone_lon"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_below="@id/drone_lat"
            android:layout_toEndOf="@id/drone_v_speed"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/lon_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <TextView
            android:id="@+id/drone_alt"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/drone_lat"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/alt_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <TextView
            android:id="@+id/drone_dis"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_below="@id/drone_alt"
            android:layout_toEndOf="@id/drone_lon"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/dis_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <TextView
            android:id="@+id/drone_yaw"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/drone_dis"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/yaw_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
        <TextView
            android:id="@+id/drone_mount_yaw"
            android:layout_height="@dimen/bar_view_height"
            android:layout_width="@dimen/bar_view_width1"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/drone_dis"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/mount_yaw_na"
            android:textColor="@android:color/black"
            android:textSize="@dimen/telemetry_txt_size"/>
    </RelativeLayout>

</RelativeLayout>